dhall/tests/type-inference/failure/unit/RecordLitDuplicateFieldsNotRecords.txt
Type error: error: DuplicateFieldName
 --> <current file>:1:14
  |
...
7 | { x = 0, x = 0 }
  |              ^ DuplicateFieldName
  |
